--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -8,11 +8,7 @@
     "Move to Speaker",
     "Get First Note"
   ],
-  "autoFolders": [
-    "Basic auto",
-    "Standard Auto",
-    "Notes Autos"
-  ],
+  "autoFolders": [],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
